<resources>
    <string name="app_name">GripLockIoT</string>
    <string name="exit_the_application">Exit the application</string>
    <string name="view_scorecards">View scorecards</string>
    <string name="create_course">Create course</string>
    <string name="start_game">Start game</string>
    <string name="title_activity_start_game">StartGameActivity</string>
    <string name="course_name">Course Name</string>
    <string name="type_the_name_of_the_course">Type the name of the course</string>
    <string name="number_of_holes">Number of Holes</string>
    <string name="_18">18</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="hole">Hole:</string>
    <string name="par">Par:</string>
    <string name="hello_world">Hello world</string>
    <string name="course">Course:</string>
    <string name="add_course">Add course</string>
    <string name="query_db">Query DB</string>
    <string name="title_activity_view_course">ViewCourseActivity</string>
    <string name="length">Length:</string>
    <string name="lengthHeader">Length: </string>
    <string name="parTotalHeader">Par:</string>
    <string name="length_number_picker">Length</string>
    <string name="par_number_picker">Par</string>
    <string name="title_activity_maps">Map</string>
    <string name="select_location">Select location</string>
    <string name="add">Add</string>
    <string name="switchMapType">Switch</string>
    <string name="delete_course">Delete course?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="add_new_player">Add new player</string>
    <string name="create_new_player">Create new player</string>
    <string name="input_name">Input name</string>
    <string name="type_player_name">Type player name</string>
    <string name="ok">OK</string>

</resources>
