<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".CreateCourseActivity">

    <TextView
        android:id="@+id/courseName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/course_name"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/courseNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/type_the_name_of_the_course" />

    <TextView
        android:id="@+id/numberOfHoles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/number_of_holes"
        android:textSize="20sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/holes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:text="@string/_18"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/minusButton"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/plusButton"
            android:text="@string/minus" />

        <Button
            android:id="@+id/plusButton"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/plus" />

    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/course_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </android.support.v7.widget.RecyclerView>

</LinearLayout>